Style: overlay, Fix: replace blurred img

--- a/src/components/greeting/Greeting.scss
+++ b/src/components/greeting/Greeting.scss
@@ -1,4 +1,11 @@
-.greeting__heading {
-    text-align: center;
-    padding: 15px 0;
+.greeting {
+
+    &__heading {
+        text-align: center;
+        padding: 15px 0;
+    }
+
+    &__description {
+        margin: 3px 8px;
+    }
 }
