--- a/src/components/hourlyWeather/HourlyWeather.scss
+++ b/src/components/hourlyWeather/HourlyWeather.scss
@@ -1,5 +1,5 @@
 .hourlyWeather {
-    background-color: #89b2ff; // Temporary color until dynamic BG added
+    //background-color: #89b2ff; // Temporary color until dynamic BG added
     border-radius: 8px;
     padding: 10px 4px;
     width: 290px;
