--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -17,6 +17,8 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    display: flex;
+    flex-direction: column;
 }
 
 p {
