--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -3,6 +3,7 @@
 h1 {
     font-family: "Inter", sans serif;
     font-weight: 500;
+    font-size: 35px;
 }
 
 p {
