--- a/src/styles/layout/_overlay.scss
+++ b/src/styles/layout/_overlay.scss
@@ -1,11 +1,10 @@
 .overlay {
-    background-color: white;
-    // width: 75vw;
-    // min-width: 320px;
-    // max-width: 50%;
+    background-image: linear-gradient(to bottom, #d0f0ff, #6db3f2 );
+    opacity: 0.93;
     margin: 10px;
     padding: 15px 10px;
     margin-left: auto;
     margin-right: auto;
     z-index: 100;
+    border-radius: 20px;
 }
